fixed some contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ nav li a {
 }
 
 .nav_active {
-    color: #4285F5;
+    color: #0C5DE9;
 }
 
 nav li {
